add page details

--- a/src/assets/scss/pages/products/index.scss
+++ b/src/assets/scss/pages/products/index.scss
@@ -1,5 +1,8 @@
 @import './table.scss';
 @import './add.scss';
+@import './details.scss';
+@import './tabs.scss';
+@import './addComments.scss';
 // products page
 .wrapperProducts{
     width: 100%;
