--- a/src/assets/scss/pages/products/table.scss
+++ b/src/assets/scss/pages/products/table.scss
@@ -8,6 +8,9 @@ table {
 th, td {
   text-align: center;
   padding: 8px;
+  a{
+    text-decoration: none;
+  }
 }
 
 tr:nth-child(even){background-color: #f2f2f2}
@@ -16,5 +19,6 @@ tr:nth-child(even){background-color: #f2f2f2}
 }
 th {
   background-color: $Lavender;
+  text-align: center !important;
   color: white;
 }
